fixed header on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 header {
 	width: 100%;
-	height: 50px;
+	height:30px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	position: fixed;
-	top: 0;
 	background-color:#66b2a9;
-	padding:20px;
+	padding: 5px;
+	text-align:center;
 }
 
 body {
@@ -26,6 +25,18 @@ main {
 }
 
 @media (min-width: 600px) {
+	header {
+	width: 100%;
+	height: 50px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	background-color:#66b2a9;
+	padding:20px;
+     }
+	
 	main {
 		width: 50%;
 	}
@@ -95,4 +106,8 @@ figure {
 
 .left-align {
 	text-align:left;
+}
+
+.extra-padding {
+	padding:40px;
 }
